--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,34 @@
+sudo: required
+dist: trusty
+
 language: cpp
 
-compiler:
-  - g++
+matrix:
+  include:
+    - compiler: gcc
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-4.9
+      env: COMPILER=g++-4.9
+    - compiler: gcc
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-4.9
+      env: COMPILER=g++-6
+    - compiler: gcc
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-5
+      env: COMPILER=g++-7
 
 install:
   - DEPS_DIR="${TRAVIS_BUILD_DIR}/deps"
