--- a/.travis.yml
+++ b/.travis.yml
@@ -9,20 +9,22 @@ addons:
     packages:
       # - valgrind
       - g++-6
+      - g++-7
     sources: &sources
       - ubuntu-toolchain-r-test
 
 
 cache:
   directories:
-    - ${TRAVIS_BUILD_DIR}/deps/llvm-3.6.2
-    - ${TRAVIS_BUILD_DIR}/deps/llvm-3.7.1
-    - ${TRAVIS_BUILD_DIR}/deps/llvm-3.8.0
-    - ${TRAVIS_BUILD_DIR}/deps/llvm-3.9.0
-    - ${TRAVIS_BUILD_DIR}/deps/boost-1.59.0
-    - ${TRAVIS_BUILD_DIR}/deps/boost-1.60.0
-    - ${TRAVIS_BUILD_DIR}/deps/boost-1.61.0
-    - ${TRAVIS_BUILD_DIR}/deps/boost-1.62.0
+    # - ${TRAVIS_BUILD_DIR}/deps/llvm-3.6.2
+    # - ${TRAVIS_BUILD_DIR}/deps/llvm-3.7.1
+    # - ${TRAVIS_BUILD_DIR}/deps/llvm-3.8.0
+    # - ${TRAVIS_BUILD_DIR}/deps/llvm-3.9.0
+    - ${TRAVIS_BUILD_DIR}/deps/llvm-5.0.0
+    # - ${TRAVIS_BUILD_DIR}/deps/boost-1.59.0
+    # - ${TRAVIS_BUILD_DIR}/deps/boost-1.60.0
+    # - ${TRAVIS_BUILD_DIR}/deps/boost-1.61.0
+    # - ${TRAVIS_BUILD_DIR}/deps/boost-1.62.0
     - ${TRAVIS_BUILD_DIR}/deps/boost-1.63.0
 
 
@@ -41,28 +43,29 @@ matrix:
     # Note that we only use the memory checker on the main configuration to
     # speed up Travis builds.
     ##########################################################################
-    # Clang 3.5
-    # TODO: Find out why this fails to compile the test suite.
-    # - env: UNIT_TESTS=true LLVM_VERSION=3.5.2 BOOST_VERSION=default ENABLE_MEMCHECK=true
+    # # Clang 3.6
+    # - os: linux
+    #   env: UNIT_TESTS=true LLVM_VERSION=3.6.2 BOOST_VERSION=default ENABLE_MEMCHECK=true
+    #   compiler: clang
 
-    # Clang 3.6
-    - os: linux
-      env: UNIT_TESTS=true LLVM_VERSION=3.6.2 BOOST_VERSION=default ENABLE_MEMCHECK=true
-      compiler: clang
+    # # Clang 3.7
+    # - os: linux
+    #   env: UNIT_TESTS=true LLVM_VERSION=3.7.1 BOOST_VERSION=default ENABLE_MEMCHECK=true
+    #   compiler: clang
 
-    # Clang 3.7
-    - os: linux
-      env: UNIT_TESTS=true LLVM_VERSION=3.7.1 BOOST_VERSION=default ENABLE_MEMCHECK=true
-      compiler: clang
+    # # Clang 3.8
+    # - os: linux
+    #   env: UNIT_TESTS=true LLVM_VERSION=3.8.0 BOOST_VERSION=default ENABLE_MEMCHECK=true
+    #   compiler: clang
 
-    # Clang 3.8
-    - os: linux
-      env: UNIT_TESTS=true LLVM_VERSION=3.8.0 BOOST_VERSION=default ENABLE_MEMCHECK=true
-      compiler: clang
+    # # Clang 3.9
+    # - os: linux
+    #   env: UNIT_TESTS=true LLVM_VERSION=3.9.0 BOOST_VERSION=default ENABLE_MEMCHECK=true
+    #   compiler: clang
 
-    # Clang 3.9
+    # Clang 5.0
     - os: linux
-      env: UNIT_TESTS=true LLVM_VERSION=3.9.0 BOOST_VERSION=default ENABLE_MEMCHECK=true
+      env: UNIT_TESTS=true LLVM_VERSION=5.0.0 BOOST_VERSION=default ENABLE_MEMCHECK=true
       compiler: clang
 
     # GCC 6
@@ -70,63 +73,73 @@ matrix:
       env: UNIT_TESTS=true COMPILER=g++-6     BOOST_VERSION=default ENABLE_MEMCHECK=true
       compiler: gcc
 
-    # Xcode 6.4
-    - os: osx
-      env: UNIT_TESTS=true BOOST_VERSION=default
-      osx_image: xcode6.4
+    # GCC 7
+    - os: linux
+      env: UNIT_TESTS=true COMPILER=g++-7     BOOST_VERSION=default ENABLE_MEMCHECK=true
+      compiler: gcc
 
-    # Xcode 7.3
-    - os: osx
-      env: UNIT_TESTS=true BOOST_VERSION=default
-      osx_image: xcode7.3
+    # # Xcode 6.4
+    # - os: osx
+    #   env: UNIT_TESTS=true BOOST_VERSION=default
+    #   osx_image: xcode6.4
 
-    # Xcode 8
+    # # Xcode 7.3
+    # - os: osx
+    #   env: UNIT_TESTS=true BOOST_VERSION=default
+    #   osx_image: xcode7.3
+
+    # # Xcode 8
+    # - os: osx
+    #   env: UNIT_TESTS=true BOOST_VERSION=default
+    #   osx_image: xcode8
+
+    # Xcode 9
     - os: osx
       env: UNIT_TESTS=true BOOST_VERSION=default
-      osx_image: xcode8
+      osx_image: xcode9
 
     ##########################################################################
     # Build with variations in the configuration
     ##########################################################################
     # Without concept checks
-    - os: linux
-      env: UNIT_TESTS=true LLVM_VERSION=default BOOST_VERSION=default CMAKE_OPTIONS="-DBOOST_HANA_ENABLE_CONCEPT_CHECKS=OFF"
-      compiler: clang
+    # - os: linux
+    #   env: UNIT_TESTS=true LLVM_VERSION=default BOOST_VERSION=default CMAKE_OPTIONS="-DBOOST_HANA_ENABLE_CONCEPT_CHECKS=OFF"
+    #   compiler: clang
 
-    # With debug mode
-    - os: linux
-      env: UNIT_TESTS=true LLVM_VERSION=default BOOST_VERSION=default CMAKE_OPTIONS="-DBOOST_HANA_ENABLE_DEBUG_MODE=ON"
-      compiler: clang
+    # # With debug mode
+    # - os: linux
+    #   env: UNIT_TESTS=true LLVM_VERSION=default BOOST_VERSION=default CMAKE_OPTIONS="-DBOOST_HANA_ENABLE_DEBUG_MODE=ON"
+    #   compiler: clang
 
-    # Without exceptions
-    - os: linux
-      env: UNIT_TESTS=true LLVM_VERSION=default BOOST_VERSION=default CMAKE_OPTIONS="-DBOOST_HANA_ENABLE_EXCEPTIONS=OFF"
-      compiler: clang
+    # # Without exceptions
+    # - os: linux
+    #   env: UNIT_TESTS=true LLVM_VERSION=default BOOST_VERSION=default CMAKE_OPTIONS="-DBOOST_HANA_ENABLE_EXCEPTIONS=OFF"
+    #   compiler: clang
 
-    # Without exceptions on OS X
-    - os: osx
-      env: UNIT_TESTS=true BOOST_VERSION=default CMAKE_OPTIONS="-DBOOST_HANA_ENABLE_EXCEPTIONS=OFF"
-      osx_image: xcode8
+    # # Without exceptions on OS X
+    # - os: osx
+    #   env: UNIT_TESTS=true BOOST_VERSION=default CMAKE_OPTIONS="-DBOOST_HANA_ENABLE_EXCEPTIONS=OFF"
+    #   osx_image: xcode8
 
-    # With Boost 1.59
-    - os: linux
-      env: UNIT_TESTS=true LLVM_VERSION=default BOOST_VERSION=1.59.0
-      compiler: clang
+    # # With Boost 1.59
+    # - os: linux
+    #   env: UNIT_TESTS=true LLVM_VERSION=default BOOST_VERSION=1.59.0
+    #   compiler: clang
 
-    # With Boost 1.60
-    - os: linux
-      env: UNIT_TESTS=true LLVM_VERSION=default BOOST_VERSION=1.60.0
-      compiler: clang
+    # # With Boost 1.60
+    # - os: linux
+    #   env: UNIT_TESTS=true LLVM_VERSION=default BOOST_VERSION=1.60.0
+    #   compiler: clang
 
-    # With Boost 1.61
-    - os: linux
-      env: UNIT_TESTS=true LLVM_VERSION=default BOOST_VERSION=1.61.0
-      compiler: clang
+    # # With Boost 1.61
+    # - os: linux
+    #   env: UNIT_TESTS=true LLVM_VERSION=default BOOST_VERSION=1.61.0
+    #   compiler: clang
 
-    # With Boost 1.62
-    - os: linux
-      env: UNIT_TESTS=true LLVM_VERSION=default BOOST_VERSION=1.62.0
-      compiler: clang
+    # # With Boost 1.62
+    # - os: linux
+    #   env: UNIT_TESTS=true LLVM_VERSION=default BOOST_VERSION=1.62.0
+    #   compiler: clang
 
     # Without Boost (make sure we don't depend on it)
     - os: linux
@@ -193,7 +206,9 @@ install:
   ############################################################################
   # Setup default versions and override compiler if needed
   ############################################################################
-  - if [[ "${LLVM_VERSION}" == "default" ]]; then LLVM_VERSION=3.9.0; fi
+  # - if [[ "${LLVM_VERSION}" == "default" ]]; then LLVM_VERSION=3.9.0; fi
+  # - if [[ "${BOOST_VERSION}" == "default" ]]; then BOOST_VERSION=1.63.0; fi
+  - if [[ "${LLVM_VERSION}" == "default" ]]; then LLVM_VERSION=5.0.0; fi
   - if [[ "${BOOST_VERSION}" == "default" ]]; then BOOST_VERSION=1.63.0; fi
 
   - if [[ "${COMPILER}" != "" ]]; then export CXX=${COMPILER}; fi
