Fixed boost config in CMakeLists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,15 +3,17 @@ project(TravisTest)
 
 set(CMAKE_CXX_STANDARD 17)
 
-set(CXX_FLAGS "-Wall -Weffc++ -m64 -O3")
-set(CMAKE_CXX_FLAGS "${CXX_FLAGS}")
+#set(CXX_FLAGS "-Wall -Weffc++ -m64 -O3")
+set(CXX_FLAGS "-Wall -m64 -O3")
+#set(BOOST_FLAGS "-lboost_system")
+set(CMAKE_CXX_FLAGS "${CXX_FLAGS} ${BOOST_FLAGS}")
 
 add_executable(TravisTest src/main.cpp)
 
-find_package(Boost 1.63)
-if (NOT Boost_FOUND)
-    message(WARNING "The rest of Boost was not found; some tests and examples will be disabled.")
-endif()
+find_package(Boost REQUIRED COMPONENTS system filesystem)
+include_directories(${Boost_INCLUDE_DIR})
+link_directories(${Boost_LIBRARY_DIRS})
+target_link_libraries(TravisTest ${Boost_LIBRARIES})
 
 ##############################################################################
 # Setup the `check` target to build and then run all the tests
