--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ set(CMAKE_CXX_FLAGS "${CXX_FLAGS} ${BOOST_FLAGS}")
 
 add_executable(TravisTest src/main.cpp)
 
+set(Boost_USE_STATIC_LIBS ON)
 find_package(Boost 1.63.0 REQUIRED COMPONENTS system filesystem)
 include_directories(${Boost_INCLUDE_DIR})
 link_directories(${Boost_LIBRARY_DIRS})
