Changed config for scenario with not found boost

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,9 +10,14 @@ add_executable(TravisTest src/main.cpp)
 
 set(Boost_USE_STATIC_LIBS ON)
 find_package(Boost 1.65 COMPONENTS system filesystem)
-include_directories(${Boost_INCLUDE_DIR})
-link_directories(${Boost_LIBRARY_DIRS})
-target_link_libraries(TravisTest ${Boost_LIBRARIES})
+
+if (NOT Boost_FOUND)
+    message(WARNING "The rest of Boost was not found; some tests and examples will be disabled.")
+else()
+    include_directories(${Boost_INCLUDE_DIR})
+    link_directories(${Boost_LIBRARY_DIRS})
+    target_link_libraries(TravisTest ${Boost_LIBRARIES})
+endif()
 
 ##############################################################################
 # Setup the `check` target to build and then run all the tests
